2007-06-15  Edward Hervey  <edward@fluendo.com>

	* pitivi/elements/Makefile.am: (elements_PYTHON): 
	Add the new thumbnailsink.

2007-06-14  Edward Hervey  <edward@fluendo.com>

	* pitivi/elements/thumbnailsink.py:
	First take at a thumbnailing sink that converts RGB buffers into
	GdkPixbuf usable in gtk widgets.

2007-05-30  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/timelineobjects.py:
	re-activate "remove" popup button on sources now that the release is 
	done.

2007-05-30  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	Back to development cycle.

=== release 0.10.3 ===

2007-05-30  Edward Hervey  <edward@fluendo.com>

	* NEWS:
	* RELEASE:
	* configure.ac:
	Releasing 0.10.3 "Got some new t-shirts"

2007-05-30  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/timelineobjects.py: (SimpleSourceWidget.__init__):
	Disable source editing for the release.
	* po/ar.po:
	* po/ca.po:
	* po/de.po:
	* po/dz.po:
	* po/el.po:
	* po/en_GB.po:
	* po/es.po:
	* po/fi.po:
	* po/fr.po:
	* po/it.po:
	* po/pa.po:
	* po/pt_BR.po:
	* po/sv.po:
	* po/zh_CN.po:
	po files adjusted.

2007-05-30  Edward Hervey  <edward@fluendo.com>

	* AUTHORS:
	* pitivi/ui/mainwindow.py:
	Give credit to the contributors !

2007-05-30  Edward Hervey  <edward@fluendo.com>

	* po/ar.po:
	* po/ca.po:
	* po/de.po:
	* po/dz.po:
	* po/el.po:
	* po/en_GB.po:
	* po/es.po:
	* po/fi.po:
	* po/fr.po:
	* po/it.po:
	* po/pa.po:
	* po/pt_BR.po:
	* po/sv.po:
	* po/zh_CN.po:
	Update translations.

2007-05-28  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	0.10.2.2 pre-release

2007-05-28  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/source.py:
	New TimelineBlankSource for audio/video blanks.
	* pitivi/ui/timelineobjects.py:
	When adding a video-only clip to the timeline, link a blank audio
	brother to it to avoid issues.
	Fixes #441784

2007-05-28  Edward Hervey  <edward@fluendo.com>

	* pitivi/elements/smartscale.py:
	Always set the pixel-aspect-ratio on the intermediate capsfilter to